Completed most of basic GET user routes also refactored variables to match camel_case'ing
