# src/models/IRegistrationModel.ts
@@ -1,7 +1,7 @@
 export interface IRegistrationPayload {
-    username: string,
-    email: string,
-    password: string,
-    firstName: string,
-    lastName: string,
+    username: string;
+    email: string;
+    password: string;
+    first_name: string;
+    last_name: string;
 }
